--- a/GameOfLife.Api/GameOfLife.Api.csproj
+++ b/GameOfLife.Api/GameOfLife.Api.csproj
@@ -16,16 +16,16 @@
 
 	<ItemGroup>
 		<PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.0-rc.1.24452.1" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.4">
+		  <PrivateAssets>all</PrivateAssets>
+		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		</PackageReference>
 		<PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.21.0" />
 		<PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
-		<PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="9.0.0" />
-		<PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.0">
-			<PrivateAssets>all</PrivateAssets>
-		</PackageReference>
 	</ItemGroup>
 
 	<ItemGroup>
-	  <ProjectReference Include="..\GameOfLife.Repository\GameOfLife.Repository.EF.csproj" />
+	  <ProjectReference Include="..\GameOfLife.Repository.EF\GameOfLife.Repository.EF.csproj" />
 	  <ProjectReference Include="..\GameOfLife.Service\GameOfLife.Service.csproj" />
 	</ItemGroup>
 
